gcc/testsuite/rust/rustc/ui/span/E0046.rs
trait Foo {
    fn foo();
}

struct Bar;

impl Foo for Bar {}
// { dg-error ".E0046." "" { target *-*-* } .-1 }

fn main() {
}

